--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@
     </div>
     <footer>
        <p>© 2035 by Ponto Pet. Powered and secured by Wix</p> 
+        <p>Sanchit Janardhan Mhashakhetri</p> 
     </footer>
 </body>
 
